log
c++ -std=c++11 -fopenmp -O3  -g -Wall -pedantic -Wno-strict-overflow -c grid/Grid.cc -o grid/Grid.o  -L/usr/X11R6/lib -lm -lpthread -lX11
c++ -std=c++11 -fopenmp -O3  -g -Wall -pedantic -Wno-strict-overflow -c grid/GridLevel.cc -o grid/GridLevel.o  -L/usr/X11R6/lib -lm -lpthread -lX11
c++ -std=c++11 -fopenmp -O3  -g -Wall -pedantic -Wno-strict-overflow -c grid/BoundaryConditions.cc -o grid/BoundaryConditions.o  -L/usr/X11R6/lib -lm -lpthread -lX11
c++ -std=c++11 -fopenmp -O3  -g -Wall -pedantic -Wno-strict-overflow -c viz/SolutionViewer.cc -o viz/SolutionViewer.o  -L/usr/X11R6/lib -lm -lpthread -lX11
grid/GridLevel.cc: In member function ‘void GridLevel::initialize(double, double, double, char*, char*, double, GridLevel*)’:
grid/GridLevel.cc:89:3: error: ‘next_grid_level’ was not declared in this scope
   next_grid_level = next_grid_level_;
   ^
grid/GridLevel.cc: In member function ‘void GridLevel::refine_marked()’:
grid/GridLevel.cc:261:24: error: ‘next_grid_level’ was not declared in this scope
       cells[i].refine( next_grid_level->get_cells() );
                        ^
grid/GridLevel.cc: In member function ‘void GridLevel::refine_all()’:
grid/GridLevel.cc:273:3: error: ‘next_grid_level’ was not declared in this scope
   next_grid_level->refresh_active_cells();
   ^
grid/GridLevel.cc: In member function ‘void GridLevel::refine_half(size_t, size_t)’:
grid/GridLevel.cc:292:3: error: ‘next_grid_level’ was not declared in this scope
   next_grid_level->refresh_active_cells();
   ^
grid/GridLevel.cc: In member function ‘void GridLevel::identify_interfaces()’:
grid/GridLevel.cc:315:49: error: ‘next_grid_level’ was not declared in this scope
               if (not nc.has_interface_children(next_grid_level->get_cells()))
                                                 ^
grid/GridLevel.cc:327:45: error: ‘next_grid_level’ was not declared in this scope
               nc.create_interface_children( next_grid_level->get_cells() );
                                             ^
grid/Grid.cc: In member function ‘void Grid::initialize(size_t, size_t, double, double, double, double, double, char*, char*, double, double, double)’:
grid/Grid.cc:44:35: error: no matching function for call to ‘Cell::Cell(double&, double&, double&)’
   Cell default_cell( rho0, u0, v0 );
                                   ^
grid/Grid.cc:44:35: note: candidates are:
In file included from grid/Grid.h:10:0,
                 from grid/Grid.cc:1:
grid/../cell/Cell.h:37:3: note: Cell::Cell(Cell*, std::vector<Cell>*)
   Cell( Cell* parent, 
   ^
grid/../cell/Cell.h:37:3: note:   candidate expects 2 arguments, 3 provided
grid/../cell/Cell.h:36:3: note: Cell::Cell(Cell*)
   Cell( Cell* parent ); // meant for (single-level) refine operation.
   ^
grid/../cell/Cell.h:36:3: note:   candidate expects 1 argument, 3 provided
grid/../cell/Cell.h:34:3: note: Cell::Cell(double, double, double, std::vector<Cell>*, std::vector<Cell>*)
   Cell( double u_, double v_, double rho_, 
   ^
grid/../cell/Cell.h:34:3: note:   candidate expects 5 arguments, 3 provided
grid/../cell/Cell.h:30:7: note: constexpr Cell::Cell(const Cell&)
 class Cell
       ^
grid/../cell/Cell.h:30:7: note:   candidate expects 1 argument, 3 provided
grid/../cell/Cell.h:30:7: note: constexpr Cell::Cell(Cell&&)
grid/../cell/Cell.h:30:7: note:   candidate expects 1 argument, 3 provided
make: *** [grid/Grid.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [grid/GridLevel.o] Error 1
make: *** [viz/SolutionViewer.o] Interrupt
